syntax = "proto3";
package stride.stakeibc;

option go_package = "github.com/MonikaCat/stride/v15/x/stakeibc/types";

enum ICAAccountType {
  DELEGATION = 0;
  FEE = 1;
  WITHDRAWAL = 2;
  REDEMPTION = 3;
}
